# lsd_ultraS

./: LICENSE  README.md  README.txt
CODE/lsd_ultraS/: CMakeLists.txt  SSD1306.c  SSD1306.h  lsd_ultraS.c  lsd_ultraS2.c  pulse.pio
SCHEMATICS:SIMULATIONS/SIMULATIONS/Hbridge-pico/: Hbridge-pico.kicad_prl  Hbridge-pico.kicad_pro  Hbridge-pico.kicad_sch
SCHEMATICS:SIMULATIONS/SIMULATIONS/SPICE_MODELS/: BC547C_SPICE_Model_FIXED (1).MOD  BC557.mod  pc817_bins.mod
SCHEMATICS:SIMULATIONS/SIMULATIONS/test_gains/: test_gains.kicad_prl  test_gains.kicad_pro  test_gains.kicad_sch  test_gains.wbk  ~test_gains.kicad_sch.lck
SCHEMATICS:SIMULATIONS/lsd_ultraS/: fp-info-cache  lsd_ultraS.kicad_prl  lsd_ultraS.kicad_pro  lsd_ultraS.kicad_sch
